<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/headerImg"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerImg"
        app:layout_constraintVertical_bias="0.3"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:hint="@string/login_1" />

            <AutoCompleteTextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:completionThreshold="1"
                android:hint="Your account"
                android:textSize="14dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/login_2" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="Your password"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/login_3"
                android:textColor="@color/forgot" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_1"
                app:backgroundTint="@null"
                android:text="@string/login_4"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_5" />

                <TextView
                    android:id="@+id/create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/login_6"
                    android:textColor="@color/forgot" />
            </LinearLayout>


            <Button
                android:id="@+id/login_facebook"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"

                android:background="@drawable/button_facebook"
                app:backgroundTint="@null"
                android:drawableLeft="@drawable/facebook"
                android:gravity="center_vertical|start"
                android:text="Sign in with Facebook"

                android:textColor="@color/white" />


            <Button
                android:id="@+id/login_google"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_google"
                app:backgroundTint="@null"
                android:drawableLeft="@drawable/google"
                android:gravity="center_vertical|start"
                android:text="Sign in with Google"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>